--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_USER=your_mongodb_user
-MONGODB_PASSWORD=your_mongodb_password
-MONGODB_URL=your_mongodb_url
-MONGODB_DB=your_mongodb_database_name
+MONGODB_USER=<tsymbalvladislav>
+MONGODB_PASSWORD=<JIS5sGkDcUSnGPQV>
+MONGODB_URL=<@cluster0.9bdut.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0>
+MONGODB_DB=<myDatabase>
