--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-nodejs-project",
+  "name": "hw2-mongodb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,17 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.6.0",
-    "pino": "^9.3.2"
-  },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "mongodb": "^6.8.0"
   }
 }
