--- a/package.json
+++ b/package.json
@@ -2,26 +2,25 @@
   "name": "hw2-mongodb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+   "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "nodemon src/index.js",
+  "start": "node src/index.js",
+  "import": "node src/importContacts.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^9.9.1",
-    "globals": "^15.9.0",
     "nodemon": "^3.1.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0",
     "mongoose": "^8.6.1",
     "pino": "^9.4.0"
   }
