--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-   "test": "echo \"Error: no test specified\" && exit 1",
-  "dev": "nodemon src/index.js",
-  "start": "node src/index.js",
-  "import": "node src/importContacts.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "import": "node src/importContacts.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "pino": "^9.4.0"
   }
