--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PORT=3000
-MONGODB_USER=tsymbalvladislav
-MONGODB_PASSWORD=pm40D3lsnn8miPUc
-MONGODB_URL=cluster0.9bdut.mongodb.net
-MONGODB_DB=myDatabase
+PORT=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
