--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "koi": "^0.1.1",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "pino": "^9.4.0"
